test/valid/56307_zeroLengthArray/zeroLengthArray.agu
-- Author: 56307, Denis Ungureanu
let zeroArray : Int[] = new Int[0 | 0]
let main(_) : Unit -> Unit = print(length(zeroArray))