test/invalid-semantic/58170_wrongIndexType/wrongIndexType.agu
-- Author: 58170, Guilherme Sousa

let main : Unit =
  let arr : Int[] = new Int[5 | 0];
  let index : Bool = true;
  print(arr[index])